Test 2 to fix wrapping of homescreen headings

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,7 @@ h3 {
     box-shadow: 0 10px 30px rgba(0,0,0,0.3); 
 }
 
+
 /*Styling for Instructions box*/
 #instruction-box-area
 {
@@ -314,10 +315,19 @@ max-width: 500px;
 /*Media Queries */
 
 @media (max-width: 576px) {
+    #home-quiz-box-area {
+         padding-left: 1rem;
+         padding-right: 1rem;
+         max-width: 100%;
+    }
+
     #home-quiz-box-area h1 {
-        font-size: 1.25rem;
+        font-size: 1.50rem;
+        white-space: nowrap;
+
     }
     #home-quiz-box-area h2{
-        font-size: 1.00rem;
+        font-size: 1.25rem;
+        white-space: nowrap;
     }
 }
